--- a/index.html
+++ b/index.html
@@ -8,253 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-
-    <style>
-        /* CSS Variables für einfache Farbanpassungen */
-        :root {
-            --color-primary: #a16258; /* Ein warmer, eleganter Braun-Ton */
-            --color-secondary: #3c4858; /* Dunkles Blau-Grau für Text */
-            --color-light: #fdfaf8; /* Ein warmer Off-White Ton */
-            --color-accent: #c48a7e; /* Akzentfarbe für Hover-Effekte */
-            --font-headings: 'Lora', serif;
-            --font-body: 'Open Sans', sans-serif;
-        }
-
-        /* Basis-Styling */
-        body {
-            font-family: var(--font-body);
-            background-color: var(--color-light);
-            margin: 0;
-            color: var(--color-secondary);
-            line-height: 1.7;
-            font-size: 17px;
-        }
-
-        /* Container für den Inhalt */
-        .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 0 1.5rem;
-        }
-
-        /* --- Header & Hero Section --- */
-        .hero {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)), url('Bilder/549333492.jpg'); /* HIER IHR BESTES BILD EINTRAGEN */
-            background-size: cover;
-            background-position: center;
-            color: white;
-            text-align: center;
-            padding: 6rem 1rem 4rem 1rem;
-            text-shadow: 0 2px 5px rgba(0,0,0,0.5);
-        }
-        .hero h1 {
-            font-family: var(--font-headings);
-            font-size: 3.5rem;
-            margin: 0;
-            font-weight: 600;
-        }
-        .hero p {
-            font-size: 1.25rem;
-            margin-top: 0.5rem;
-            font-weight: 300;
-        }
-
-        /* --- Navigation --- */
-        .navbar {
-            background-color: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            border-bottom: 1px solid #eee;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            padding: 0.8rem 0;
-            transition: box-shadow 0.3s;
-        }
-        .navbar.scrolled {
-            box-shadow: 0 4px 15px rgba(0,0,0,0.07);
-        }
-        .nav-links {
-            display: flex;
-            justify-content: center;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-        .nav-links a {
-            color: var(--color-secondary);
-            text-decoration: none;
-            margin: 0 1.2rem;
-            font-weight: 600;
-            font-size: 0.95rem;
-            transition: color 0.2s;
-            padding: 0.5rem;
-        }
-        .nav-links a:hover {
-            color: var(--color-primary);
-        }
-
-        /* --- Sections Allgemein --- */
-        section {
-            padding: 4rem 0;
-            border-bottom: 1px solid #eee;
-        }
-        section:last-of-type {
-            border-bottom: none;
-        }
-        h2 {
-            font-family: var(--font-headings);
-            font-size: 2.5rem;
-            text-align: center;
-            color: var(--color-primary);
-            margin-bottom: 3rem;
-        }
-
-        /* --- Ausstattung (Facts) --- */
-        .facts {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            list-style: none;
-            padding: 0;
-        }
-        .facts li {
-            padding-left: 30px;
-            position: relative;
-        }
-        .facts li::before {
-            content: '✔'; /* Simples Checkmark-Icon */
-            position: absolute;
-            left: 0;
-            color: var(--color-primary);
-            font-weight: bold;
-        }
-
-        /* --- Bewertungen (Testimonials) --- */
-        .testimonials {
-            display: flex;
-            flex-direction: column;
-            gap: 1.5rem;
-        }
-        .testimonial-card {
-            background-color: white;
-            border: 1px solid #eee;
-            border-radius: 12px;
-            padding: 1.5rem;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.05);
-        }
-        .testimonial-card blockquote {
-            margin: 0;
-            font-style: italic;
-            color: #555;
-            border-left: 4px solid var(--color-accent);
-            padding-left: 1rem;
-        }
-        .rating-summary {
-            text-align: center;
-            font-weight: bold;
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-            color: var(--color-secondary);
-        }
-
-        /* --- Bildergalerie --- */
-        .image-gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 1rem;
-        }
-        .image-gallery img {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 12px;
-            cursor: pointer;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .image-gallery img:hover {
-            transform: scale(1.03);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
-        }
-
-        /* --- Buchungs-Button (Call to Action) --- */
-        .cta-section {
-            background-color: white;
-            text-align: center;
-            border-radius: 12px;
-            padding: 3rem;
-        }
-        .cta-button {
-            display: inline-block;
-            background-color: var(--color-primary);
-            color: white;
-            font-size: 1.2rem;
-            font-weight: bold;
-            text-decoration: none;
-            padding: 1rem 2.5rem;
-            border-radius: 50px;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-        .cta-button:hover {
-            background-color: var(--color-accent);
-            transform: translateY(-3px);
-        }
-        
-        /* --- Footer --- */
-        footer {
-            text-align: center;
-            background-color: var(--color-secondary);
-            color: #ccc;
-            padding: 2rem;
-            font-size: 0.9rem;
-        }
-        footer a {
-            color: white;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        /* --- Lightbox für die Bildergalerie --- */
-        .lightbox {
-            display: none;
-            position: fixed;
-            z-index: 2000;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.85);
-            justify-content: center;
-            align-items: center;
-        }
-        .lightbox img {
-            max-width: 90%;
-            max-height: 80%;
-            box-shadow: 0 0 30px rgba(0,0,0,0.5);
-        }
-        .lightbox .close {
-            position: absolute;
-            top: 20px;
-            right: 30px;
-            color: white;
-            font-size: 3rem;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        /* --- Responsive Design --- */
-        @media (max-width: 768px) {
-            .hero h1 { font-size: 2.5rem; }
-            .hero p { font-size: 1.1rem; }
-            h2 { font-size: 2rem; }
-            section { padding: 3rem 0; }
-            .nav-links a { margin: 0 0.5rem; font-size: 0.85rem;}
-        }
-
-    </style>
-</head>
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+ </head>
 <body>
 
     <header class="hero">
