Add SEO meta tags and JSON-LD

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" type="text/css">
+
+    <meta name="description" content="Ferienwohnung Rosemarie in Kamp-Bornhofen am Rhein – ruhige Lage, voll ausgestattete Küche, WLAN und Garten.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://example.com/">
+    <meta property="og:title" content="Ferienwohnung Rosemarie – Ihr Zuhause in Kamp-Bornhofen am Rhein">
+    <meta property="og:description" content="Gemütliche Ferienwohnung im UNESCO-Welterbe Oberes Mittelrheintal.">
+    <meta property="og:image" content="Bilder/549333492.jpg">
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LodgingBusiness",
+        "name": "Ferienwohnung Rosemarie",
+        "description": "Gemütliche Ferienwohnung im UNESCO-Welterbe Oberes Mittelrheintal.",
+        "url": "https://example.com/",
+        "image": "Bilder/549333492.jpg",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Kamp-Bornhofen",
+            "addressCountry": "DE"
+        }
+    }
+    </script>
  </head>
 <body>
 
