Überall mein den Familienname eingetrage

--- a/impressum.html
+++ b/impressum.html
@@ -23,7 +23,7 @@
     </main>
     <footer>
         <div class="container">
-            © 2025 Ferienwohnung Rosemarie – Familie [Tom Baudson]<br>
+            © 2025 Ferienwohnung Rosemarie – Familie Baudson<br>
             <a href="impressum.html">Impressum</a> &bull; <a href="datenschutz.html">Datenschutz</a>
         </div>
     </footer>
