--- a/datenschutz.html
+++ b/datenschutz.html
@@ -20,7 +20,7 @@
     </main>
     <footer>
         <div class="container">
-            © 2025 Ferienwohnung Rosemarie – Familie [Ihr Name hier eintragen]<br>
+            © 2025 Ferienwohnung Rosemarie – Familie Baudson<br>
             <a href="impressum.html">Impressum</a> &bull; <a href="datenschutz.html">Datenschutz</a>
         </div>
     </footer>
