--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <footer>
         <div class="container">
-            © 2025 Ferienwohnung Rosemarie – Familie [Tom Bauson]<br>
+            © 2025 Ferienwohnung Rosemarie – Familie Bauson<br>
             <a href="impressum.html">Impressum</a> &bull; <a href="datenschutz.html">Datenschutz</a>
         </div>
     </footer>
