--- a/datenschutz.html
+++ b/datenschutz.html
@@ -20,6 +20,7 @@
     </main>
     <footer>
         <div class="container">
+            <a href="index.html" class="home-link">← Startseite</a><br>
             © 2025 Ferienwohnung Rosemarie – Familie Baudson<br>
             <a href="impressum.html">Impressum</a> &bull; <a href="datenschutz.html">Datenschutz</a>
         </div>
