Impressum-und Datenschutzerklärung ausgefüllt

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -8,6 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <style>
+        /* Optional: Ein paar einfache Stile für bessere Lesbarkeit */
+        .container h1 {            
+            text-align: left;
+        }
+        .container h2, .container h3 {
+            font-size: 1.5em;
+            color: #222;
+            text-align: left;
+        }        
+        .container .link {
+            color: #007bff;
+        }
+        .container strong {
+            font-weight: bold;
+        }
+        .placeholder {
+            color: #856404;
+        }
+    </style>    
 </head>
 <body>
     <header class="hero">
@@ -15,7 +35,93 @@
     </header>
     <main>
         <div class="container">
-            <p>Hier entsteht die Datenschutzerklärung der Ferienwohnung Rosemarie.</p>
+            <h1>Datenschutzerklärung</h1>
+
+            <p>Diese Datenschutzerklärung klärt Sie über die Art, den Umfang und Zweck der Verarbeitung von personenbezogenen Daten (nachfolgend kurz „Daten“) im Rahmen der Bereitstellung unserer Webseite und der damit verbundenen Funktionen und Inhalte auf.</p>
+
+            <h2>1. Verantwortlicher</h2>
+            <p>
+                <span class="placeholder">Egon und Rosemarie Baudson</span><br>
+                <span class="placeholder">Bachstr. 10</span><br>
+                <span class="placeholder">56341 Kamp-Bornhofen</span><br>
+                E-Mail: <span class="placeholder">info@Ferienwohnung-Rosemarie.de</span><br>
+                Telefon: <span class="placeholder">06773 / 645</span><br>
+                <a href="impressum.html" class="link">Zum Impressum</a>
+            </p>
+
+            <h2>2. Arten der verarbeiteten Daten</h2>
+            <ul>
+                <li><strong>Nutzungsdaten:</strong> Besuchte Webseiten, Zugriffszeiten, Meta-/Kommunikationsdaten (z.B. IP-Adressen, Geräte-Informationen).</li>
+            </ul>
+
+            <h2>3. Zweck der Verarbeitung</h2>
+            <ul>
+                <li>Zurverfügungstellung des Onlineangebotes, seiner Funktionen und Inhalte.</li>
+                <li>Gewährleistung eines reibungslosen Verbindungsaufbaus der Website.</li>
+                <li>Gewährleistung der Sicherheit und Stabilität des Systems.</li>
+            </ul>
+
+            <h2>4. Hosting bei Netlify</h2>
+            <p>
+                Unsere Webseite wird bei Netlify, Inc., 2325 3rd Street, Suite 296, San Francisco, California 94107, USA, gehostet. Da Netlify ein US-amerikanisches Unternehmen ist, werden bei der Nutzung unserer Webseite Daten in die USA übertragen.
+            </p>
+            <p>
+                Bei jedem Aufruf unserer Webseite erfasst Netlify automatisch Daten, die Ihr Browser übermittelt. Diese werden in sogenannten Server-Log-Files gespeichert. Dies sind:
+            </p>
+            <ul>
+                <li>Ihre IP-Adresse</li>
+                <li>Datum und Uhrzeit der Anfrage</li>
+                <li>Zeitzonendifferenz zur Greenwich Mean Time (GMT)</li>
+                <li>Inhalt der Anforderung (konkrete Seite)</li>
+                <li>Zugriffsstatus/HTTP-Statuscode</li>
+                <li>Jeweils übertragene Datenmenge</li>
+                <li>Website, von der die Anforderung kommt (Referrer URL)</li>
+                <li>Browser, Betriebssystem und dessen Oberfläche sowie Sprache und Version der Browsersoftware.</li>
+            </ul>
+            <p>
+                Diese Daten werden von Netlify zur Verfügung gestellt, um die Auslieferung der Webseite zu ermöglichen und die Sicherheit und Stabilität der Systeme zu gewährleisten. Rechtsgrundlage hierfür ist unser berechtigtes Interesse an einer korrekten Darstellung und Sicherheit unserer Webseite gemäß Art. 6 Abs. 1 lit. f DSGVO.
+            </p>
+            <p>
+                Für die Datenübertragung in die USA haben wir mit Netlify einen Auftragsverarbeitungsvertrag (AVV) abgeschlossen, der die Standardvertragsklauseln der EU-Kommission enthält. Diese sollen sicherstellen, dass Ihre Daten auch bei der Verarbeitung in den USA einem europäischen Datenschutzniveau unterliegen.
+            </p>
+            <p>
+                Weitere Informationen zum Datenschutz bei Netlify finden Sie unter: <a href="https://www.netlify.com/privacy/" target="_blank" rel="noopener noreferrer">https://www.netlify.com/privacy/</a> und <a href="https://www.netlify.com/gdpr-ccpa/" target="_blank" rel="noopener noreferrer">https://www.netlify.com/gdpr-ccpa/</a>.
+            </p>
+            
+            <h2>5. Keine Cookies</h2>
+            <p>Da es sich um eine rein statische Webseite handelt, setzen wir selbst keine Cookies ein, die für den Betrieb der Seite nicht zwingend erforderlich sind.</p>
+
+            <h2>6. Externer Link zu Booking.com</h2>
+            <p>
+                Auf unserer Webseite befindet sich ein Link, der Sie auf das Buchungsportal von Booking.com weiterleitet. Booking.com ist ein Angebot der Booking.com B.V., Herengracht 597, 1017 CE Amsterdam, Niederlande.
+            </p>
+            <p>
+                Wenn Sie auf diesen Link klicken, verlassen Sie unsere Webseite und werden auf die Seite von Booking.com weitergeleitet. Wir haben keinen Einfluss auf die Verarbeitung Ihrer Daten durch Booking.com. Ab dem Klick auf den Link liegt die datenschutzrechtliche Verantwortung ausschließlich bei Booking.com.
+            </p>
+            <p>
+                Bitte informieren Sie sich auf deren Webseite über den Umgang mit Ihren personenbezogenen Daten. Die Datenschutzerklärung von Booking.com finden Sie hier: <a href="https://www.booking.com/content/privacy.de.html" target="_blank" rel="noopener noreferrer">https://www.booking.com/content/privacy.de.html</a>
+            </p>
+
+            <h2>7. Kontaktaufnahme</h2>
+            <p>
+                Wenn Sie uns per E-Mail oder Telefon kontaktieren, werden Ihre übermittelten Daten (z.B. Name, E-Mail-Adresse, Telefonnummer, Inhalt der Anfrage) zum Zwecke der Bearbeitung Ihrer Anfrage und für den Fall von Anschlussfragen bei uns gespeichert. Die Verarbeitung dieser Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. b DSGVO, sofern Ihre Anfrage mit der Erfüllung eines Vertrags zusammenhängt oder zur Durchführung vorvertraglicher Maßnahmen erforderlich ist. In allen übrigen Fällen beruht die Verarbeitung auf unserem berechtigten Interesse an der effektiven Bearbeitung der an uns gerichteten Anfragen (Art. 6 Abs. 1 lit. f DSGVO). Die von Ihnen an uns per Kontaktanfragen übersandten Daten verbleiben bei uns, bis Sie uns zur Löschung auffordern oder der Zweck für die Datenspeicherung entfällt (z.B. nach abgeschlossener Bearbeitung Ihres Anliegens). Zwingende gesetzliche Bestimmungen – insbesondere gesetzliche Aufbewahrungsfristen – bleiben unberührt.
+            </p>
+
+            <h2>8. Ihre Rechte als betroffene Person</h2>
+            <p>Sie haben im Rahmen der geltenden gesetzlichen Bestimmungen jederzeit das Recht auf:</p>
+            <ul>
+                <li><strong>Auskunft</strong> über Ihre bei uns gespeicherten Daten (Art. 15 DSGVO).</li>
+                <li><strong>Berichtigung</strong> unrichtiger Daten (Art. 16 DSGVO).</li>
+                <li><strong>Löschung</strong> Ihrer Daten (Art. 17 DSGVO).</li>
+                <li><strong>Einschränkung der Verarbeitung</strong> Ihrer Daten (Art. 18 DSGVO).</li>
+                <li><strong>Datenübertragbarkeit</strong> (Art. 20 DSGVO).</li>
+                <li><strong>Widerspruch gegen die Verarbeitung</strong> Ihrer Daten (Art. 21 DSGVO).</li>
+            </ul>
+            <p>Zudem haben Sie das Recht, sich bei einer Datenschutz-Aufsichtsbehörde über die Verarbeitung Ihrer personenbezogenen Daten durch uns zu beschweren (Art. 77 DSGVO).</p>
+
+            <h2>9. Aktualität und Änderung dieser Datenschutzerklärung</h2>
+            <p>Diese Datenschutzerklärung ist aktuell gültig und hat den Stand Juli 2025.</p>
+            <p>Durch die Weiterentwicklung unserer Webseite oder aufgrund geänderter gesetzlicher bzw. behördlicher Vorgaben kann es notwendig werden, diese Datenschutzerklärung zu ändern.</p>
         </div>
     </main>
     <footer>
