--- a/impressum.html
+++ b/impressum.html
@@ -8,6 +8,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <style>
+        .container h1 {            
+            text-align: left;
+        }
+        .container h2, .container h3 {
+            font-size: 1.5em;
+            color: #222;
+            text-align: left;
+        }        
+        .container .link {
+            color: #007bff;
+        }
+        .container strong {
+            font-weight: bold;
+        }
+        .placeholder {
+            color: #856404;
+        }
+    </style>       
 </head>
 <body>
     <header class="hero">
@@ -15,10 +34,50 @@
     </header>
     <main>
         <div class="container">
-            <p>Ferienwohnung Rosemarie<br>
-            Bachstraße 10<br>
-            56341 Kamp-Bornhofen<br>
-            Tel: 01234 / 567890</p>
+            <h1>Impressum</h1>
+
+            <div class="section">
+                <h2>Angaben gemäß § 5 TMG</h2>
+                <p>
+                    <span class="placeholder">Egon und Rosemarie Baudson</span><br>
+                    <span class="placeholder">Bachstraße 10</span><br>
+                    <span class="placeholder">56341 Kamp-Bornhofen</span>
+                </p>
+            </div>
+
+            <div class="section">
+                <h2>Kontakt</h2>
+                <p>
+                    Telefon: <span class="placeholder">06773 / 645</span><br>
+                    E-Mail: <span class="placeholder">info@Ferienwohnung-Rosemarie.de</span>
+                </p>
+            </div>
+
+            <div class="section">
+                <h2>Umsatzsteuer-ID</h2>
+                <p>
+                    Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>
+                    <span class="placeholder">Umsatzsteuerlicher Kleinunternehmer</span>
+                </p>
+            </div>
+
+            <div class="section">
+                <h2>EU-Streitschlichtung</h2>
+                <p>
+                    Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit, die Sie hier finden: 
+                    <a href="https://ec.europa.eu/consumers/odr" target="_blank" rel="noopener noreferrer">https://ec.europa.eu/consumers/odr</a>.
+                </p>
+                <p>
+                    Unsere E-Mail-Adresse finden Sie oben im Impressum.
+                </p>
+            </div>
+
+            <div class="section">
+                <h2>Verbraucher­streit­beilegung / Universal­schlichtungs­stelle</h2>
+                <p>
+                    Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
+                </p>
+            </div>            
         </div>
     </main>
     <footer>
