Neue Email-Adresse und Booking.com Link

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -44,7 +44,7 @@
                 <span class="placeholder">Egon und Rosemarie Baudson</span><br>
                 <span class="placeholder">Bachstr. 10</span><br>
                 <span class="placeholder">56341 Kamp-Bornhofen</span><br>
-                E-Mail: <span class="placeholder">info@Ferienwohnung-Rosemarie.de</span><br>
+                E-Mail: <span class="placeholder">ferienwohnung-rosemarie@web.de</span><br>
                 Telefon: <span class="placeholder">06773 / 645</span><br>
                 <a href="impressum.html" class="link">Zum Impressum</a>
             </p>
