--- a/impressum.html
+++ b/impressum.html
@@ -49,7 +49,7 @@
                 <h2>Kontakt</h2>
                 <p>
                     Telefon: <span class="placeholder">06773 / 645</span><br>
-                    E-Mail: <span class="placeholder">info@Ferienwohnung-Rosemarie.de</span>
+                    E-Mail: <span class="placeholder">ferienwohnung-rosemarie@web.de</span>
                 </p>
             </div>
 
