--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="cta-section">
                     <h2>Haben wir Ihr Interesse geweckt?</h2>
                     <p>Prüfen Sie freie Termine und sichern Sie sich Ihren Traumurlaub am Rhein.</p>
-                    <a href="https://www.booking.com/hotel/de/bachstrasse-10.de.html?aid=304142&label=gen173nr-1FCAEoggI46AdIM1gEaDuIAQGYAQe4ARnIAQ_YAQHoAQH4AQyIAgGoAgO4Asz2hcMGwAIB0gIkNjkzMDdhNDItNzQyMy00NzY5LWI5YmUtZjk2ODIyMWVlOTRk2AIG4AIB&sid=762a7aa2b2738ece9c1f78dc0d46b518&dest_id=-1803479&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=3&hpos=3&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&sr_order=popularity&srepoch=1751219090&srpvid=4368a4dc5e7863247ba03acd05d8c840&type=total&ucfs=1&#hp_facilities_box" target="_blank" class="cta-button">
+                    <a href="https://www.booking.com/hotel/de/bachstrasse-10.de.html?aid=304142" target="_blank" class="cta-button">
                         Verfügbarkeit & Preise auf Booking.com prüfen
                     </a>
                 </div>
